--- a/23april2020.md
+++ b/23april2020.md
@@ -1,4 +1,4 @@
-# Task 2
+## Task 2
 ### Create a infinite running docker container and then use child process as "bash" to use docker command on host system
 #### Create Dockerfile
 ```
@@ -26,3 +26,27 @@ docker version
 docker images
 docker ps
 ```
+
+
+
+## Task 3
+### To Launch a container hosting a website, and then when the image is updated, the container should automatically stop and run again with updated image
+#### Create a Dockerfile for hosting website
+```
+FROM centos
+MAINTAINER rhythmbhiwani@gmail.com
+RUN yum install httpd -y
+COPY website /var/www/html/
+EXPOSE 80
+ENTRYPOINT httpd -DFOREGROUND
+```
+##### Here, the website folder contains the contents of the website
+#### Now build the image as follows
+```
+docker build -t rhythmassignment:v3 .
+```
+#### Launch the container with this command
+```
+docker run -d -p 80:80 rhythmassignment:v3
+```
+#### Now you will be access your website through your IP addess of system on which docker engine is installed
