--- a/23april2020.md
+++ b/23april2020.md
@@ -47,6 +47,46 @@ docker build -t rhythmassignment:v3 .
 ```
 #### Launch the container with this command
 ```
-docker run -d -p 80:80 rhythmassignment:v3
+docker run -d --name website_container -p 80:80 rhythmassignment:v3
 ```
-#### Now you will be access your website through your IP addess of system on which docker engine is installed
+##### Now you will be access your website through your IP addess of system on which docker engine is installed
+
+#### Now for image of update checker, make new dockerfile
+```
+FROM ubuntu
+MAINTAINER rhythmbhiwani@gmail.com
+RUN apt-get update
+RUN apt-get install docker.io -y
+RUN mkdir /myscript
+COPY checkupdate.sh /myscript/checkupdate.sh
+RUN chmod +x /myscript/checkupdate.sh
+ENTRYPOINT ["/bin/bash","/myscript/checkupdate.sh"]
+```
+#### Make a shell script named "checkupdate.sh" in same folder as above dockerfile
+```
+#!/bin/bash
+
+while :
+do
+	LATEST=`docker image ls rhythmassignment:v3 --no-trunc --format "{{.ID}}"`
+	RUNNING=`docker inspect --format='{{.Image}}' website_container`
+	if [ "$RUNNING" != "$LATEST" ]
+	then
+		`docker rm -f website_container`
+		`docker run -d --name website_container -p 80:80 rhythmassignment:v3`
+		echo "Container Updated"
+	else
+        	echo "Website up to date"
+	fi
+	sleep 1
+done
+```
+#### Now build the image as follows:
+```
+docker build -t update_checker .
+```
+#### Run the container for update_checker as follows:
+```
+docker run -d -v /var/run/docker.sock:/var/run/docker.sock update_checker
+```
+#### Now each time the image of website is updated, the container will automatically be updated with latest version of image
