--- a/23april2020.md
+++ b/23april2020.md
@@ -90,3 +90,35 @@ docker build -t update_checker .
 docker run -d -v /var/run/docker.sock:/var/run/docker.sock update_checker
 ```
 #### Now each time the image of website is updated, the container will automatically be updated with latest version of image
+
+
+
+## Task 4
+### To create a non-root user for the image hosting a website, and allow him to run sudo commands
+#### Create Dockerfile
+```
+FROM centos
+MAINTAINER rhythmbhiwani@gmail.com
+RUN yum install httpd -y
+COPY website /var/www/html/
+EXPOSE 80
+RUN useradd -ms /bin/bash rhythm
+RUN dnf install -y sudo
+RUN echo "rhythm ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/rhythm && chmod 0440 /etc/sudoers.d/rhythm
+RUN echo "ServerName localhost" >> /etc/httpd/conf/httpd.conf
+USER rhythm
+ENTRYPOINT sudo httpd -DFOREGROUND
+```
+#### Build the Docker Image
+```
+docker build -t rhythmassignment:v4 .
+```
+#### Launch the container
+```
+docker run -d --name my_container -p 80:80 rhythmassignment:v4
+```
+#### Use exec to connect to the container
+```
+docker exec -it my_container bash
+```
+##### Now execute any command using sudo without a non-root user
