--- a/14april2020.md
+++ b/14april2020.md
@@ -1,6 +1,6 @@
-#Task 1
-#Creating 100 containers 25 each of alpine, fedora, centos, java which runs forever
-#Using Python Script
+# Task 1
+#### Creating 100 containers 25 each of alpine, fedora, centos, java which runs forever
+#### Using Python Script
 ```
 import os
 
@@ -18,8 +18,8 @@ os.system("sudo docker ps")
 
 
 
-#Task 2
-#Store names and created date of all containters in text file
+# Task 2
+#### Store names and created date of all containters in text file
 ```
 docker ps -a --format "table {{.Names}}\t{{.CreatedAt}}" > task2.txt
 cat task2.txt
@@ -28,9 +28,9 @@ cat task2.txt
 
 
 
-#Task 3
-#Create custom docker image containing firefox as parent image
-#Dockerfile
+# Task 3
+#### Create custom docker image containing firefox as parent image
+#### Dockerfile
 ```
 FROM ubuntu
 RUN apt-get update
@@ -41,19 +41,19 @@ USER rhythm
 ENV HOME /home/rhythm
 CMD /usr/bin/firefox
 ```
-#Build Command
+#### Build Command
 ```
 sudo docker build -t rhythmguifirefox .
 ```
-#Run Command
+#### Run Command
 ```
 sudo docker run -v /tmp/.X11-unix:/tmp/.X11-unix -e DISPLAY=$DISPLAY -h $HOSTNAME -v $HOME/.Xauthority:/home/rhythm/.Xauthority rhythmguifirefox
 ```
 
 
 
-#Task 4
-#Store name, cpu useage and memory usage of all containers in a files named "Ram.txt"
+# Task 4
+#### Store name, cpu useage and memory usage of all containers in a files named "Ram.txt"
 ```
 docker stats --all --no-stream --format "table {{.Name}}\t{{.CPUPerc}}\t{{.MemUsage}}\t{{.MemPerc}}" > Ram.txt
 cat Ram.txt
