--- a/9april2020.md
+++ b/9april2020.md
@@ -1,13 +1,13 @@
-#Task 1
-#Creating tree directory
+# Task 1
+#### Creating tree directory
 ```
 mkdir -p a/{b/{d/{i/m/z,j/l/z},e/h/l/z},c/{f/h/l/z,g/k/l/z}}
 ```
 
 
 
-#Task 2
-#Creating a new user and giving only date permission to it
+# Task 2
+#### Creating a new user and giving only date permission to it
 ```
 sudo useradd -m rhythm
 sudo passwd rhythm
@@ -23,8 +23,8 @@ sudo chmod -x /usr/bin/date
 ```
 
 
-#Task 3
-#Creating 2 users and copying data between them without using sudo
+# Task 3
+#### Creating 2 users and copying data between them without using sudo
 ```
 sudo apt install openssh-server -y
 sudo ufw allow ssh
@@ -49,9 +49,9 @@ ls /home/B/
 
 
 
-#Task 4
-#Run loop for 10 seconds and save ouput of cal command in file and also count number of iterations
-#Save and run the python script
+# Task 4
+#### Run loop for 10 seconds and save ouput of cal command in file and also count number of iterations
+#### Save and run the python script
 ```
 import time
 import os
